# myGl

./: .gitignore  CMakeLists.txt  README.md
dependencies/include/glad/: glad.h
src/: Camera.cpp  Camera.h  Canvas.cpp  Canvas.h  EventHandler.cpp  EventHandler.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Window.cpp  Window.h  glad.c  main.cpp  myGl.h
